--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "version": "3.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "ncc build index.js",
-    "pretty": "pretty-quick ./",
-    "test": "jest"
+    "lint": "./node_modules/.bin/eslint --fix *.js",
+    "build": "ncc build index.js -o dist",
+    "test": "jest src  --config=jest.config.js",
+    "test-debug": "node --inspect-brk node_modules/.bin/jest --runInBand src --config=jest.config.js",
+    "deploy": "rm -f dist/index.js && yarn build && git add -A && git commit -m 'W.I.P.' && git push"
   },
   "dependencies": {
     "@actions/core": "1.3.0",
-    "@actions/github": "5.0.0",
-    "@slack/web-api": "6.2.3"
+    "@actions/github": "5.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.14.3",
@@ -21,9 +22,10 @@
     "@semantic-release/git": "9.0.0",
     "@vercel/ncc": "0.28.5",
     "babel-jest": "26.6.3",
-    "jest": "26.6.3",
-    "prettier": "2.3.0",
-    "pretty-quick": "3.1.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-prettier": "3.4.0",
+    "eslint": "7.27.0",
+    "jest": "27.0.3",
     "semantic-release": "^17.4.3"
   },
   "release": {
